Adjust padding-top for fixed navbar spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,7 +12,7 @@ body {
   line-height: 1.6;
   text-align: center;
   margin: 0;
-  padding-top: 30px; /* space for fixed navbar */
+  padding-top: 31px; /* space for fixed navbar */
   box-sizing: border-box;
 }
 
